ingress/app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: app1
  #you can use Nodeport also, but this is on clusterIP
  #type: NodePort
