ingress/app2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: app2
  #type: NodePort
