ingress/app3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: app3
  #type: NodePort
