ingress/ingress-simple.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
#it will create a new loadbalancer as well
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           name: app1
           port:
            number: 80
      - path: /v2
        pathType: Prefix
        backend:
          service:
           name: app2
           port:
            number: 8080
      - path: /v3
        pathType: Prefix
        backend:
          service:
           name: app3
           port:
            number: 8080
